--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/core.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/core.css
@@ -136,6 +136,13 @@
     box-sizing: border-box;
 }
 
+/* 컨텐츠 타이틀박스 하위 small 요소 */
+.cbx h2 small{
+    font-size: 14px;
+}
+
+
+
 /* 플렉스 박스 class */
 .fbx{
     display: flex;
