--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/media.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/media.css
@@ -4,6 +4,11 @@
 /* 모바일 미디어쿼리 - 500px 이하 */
 @media screen and (max-width:500px) {
 
+    /* 서브페이지는 2가지 글자크기와 패딩변경 */
+    .stit{
+        fz
+    }
+
     /* 1.상단영역 요소 없앰 */
     .tmenu,.gnb{
         display: none;
