--- a/0000포트폴리오/css/core.css
+++ b/0000포트폴리오/css/core.css
@@ -40,6 +40,28 @@
     height: 0;
     overflow: hidden;
 }
+        /*링크걸린 이미지 테두리 없앰*/
 
+
+        ul,
+        ol {
+            /*3무*/
+            margin: 0px;
+            padding: 0px;
+            list-style: none;
+        }
+
+        ul::after,
+        ol::after {
+            content: "";
+            display: block;
+            clear: both;
+            /*float해제*/
+        }
+
+        li {
+            float: left;
+            /*옆으로 흐르게*/
+        }
 
 
