--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -138,11 +138,22 @@ body *{
         }
 
         /*왼쪽버튼*/
-        .ab1 {  
+        .ab1{
+            display: inline-block;
+            /* z-index: 9999; */
             left: 50px;
-            width: 100px;
+            width: 50px;
+            height: 50px;
+            position: relative;
+            /* top: 116px; */
+            /* right: -40px; */
             border-radius: 50%;
-            color: #000;
+            background-color: #fff;
+            font-size: 50px;
+            padding: 0;
+            margin: 0;
+            cursor: pointer;
+            /* 오버시 손가락모양 */
         }
 
         /*오른쪽버튼*/
