--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -155,6 +155,14 @@ body *{
             cursor: pointer;
             /* 오버시 손가락모양 */
         }
+
+        .ab1 i{
+            color: #ccc;
+            font-size: 20px;
+            vertical-align: super;
+            margin-left: 13px;
+            
+        }
         
 
         /*오른쪽버튼*/
