--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -139,12 +139,12 @@ body *{
 
         /*왼쪽버튼*/
         .ab1{
-            display: inline-block;
+            /* display: inline-block; */
             /* z-index: 9999; */
             left: 50px;
             width: 50px;
             height: 50px;
-            position: relative;
+            position: absolute;
             /* top: 116px; */
             /* right: -40px; */
             border-radius: 50%;
@@ -156,7 +156,8 @@ body *{
             /* 오버시 손가락모양 */
         }
 
-        .ab1 i{
+        .ab1 i,
+        .ab2 i{
             color: #ccc;
             font-size: 20px;
             vertical-align: super;
@@ -168,12 +169,27 @@ body *{
         /*오른쪽버튼*/
         .ab2 {
             right: 50px;
+            /* display: inline-block; */
+            /* z-index: 9999; */
+            /* left: 50px; */
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            border-radius: 50%;
+            background-color: #fff;
+            font-size: 50px;
+            padding: 0;
+            margin: 0;
+            cursor: pointer;
+            /* 오버시 손가락모양 */
+            
         }
 
         /*블릿버튼*/
         .indic {
             display: flex;
-            transform: translateX(1000%);
+            left: 50%;
+            transform: translateX(-50%);
             position: absolute;
             bottom: 50px;
             margin: 0 auto;
